<resources>
    <string name="app_name">Math Thai</string>
    <string name="title_activity_home">homeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Seguent</string>
    <string name="conexioServer">Error amb la conexio amb el server</string>
    <string name="Pagina_principal">Pagina Principal</string>
    <string name="Informacion_Aula">Informacio Aula</string>
    <string name="DadesUsuari">Dades Usuari</string>
    <string name="Historial">Historial</string>
    <string name="Nova_aula">Afegir nova aula</string>
    <string name="aulaCreada"> Aula creada correctament</string>
    <string name="errorAulaCreada">No s\'ha pogut crear l\'aula, torni a intentar</string>
    <string name="obtenirAula">No s´han pogut obtenir les aules</string>
    <string name="treureAlumne">No s´ha pogut treure l\'alumne de l\'aula</string>
    <string name="obtenirAlumne">No s´ha pogut obtenir els alumnes</string>
    <string name="alumnesBuit">"No hi ha alumnes en aquesta aula, si us plau afegeix algun alumne. Per afegir un nou alumne comparteix el codi d'acces"</string>
    <string name="informacioAlumne">No s´ha pogut obtenir la informacio de l\'alumne</string>
    <string name="historialAlumne">No s´ha pogut obtenir l\'historial de l\'alumne</string>
    <string name="Afegir">Afegir</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="NomP">Nom:</string>
    <string name="Nom">Nom</string>
    <string name="Cognoms">Cognoms</string>
    <string name="CognomsP">Cognoms:</string>
    <string name="Email">Email</string>
    <string name="EmailP">Email:</string>
    <string name="Constrasenya">Contrasenya</string>
    <string name="ConstrasenyaP">Contrasenya:</string>
    <string name="RestablecerConstrasenya">Reestablir contrasenya</string>
    <string name="RestablirConstrasenya">Reestablir contrasenya</string>
    <string name="ConstrasenyaAntiga">Contrasenya antiga</string>
    <string name="ConstrasenyaNova">Contrasenya nova</string>
    <string name="ConstrasenyaCoincidencia">La contrasenya antiga no es correcta</string>
    <string name="ConstrasenyaCambiada">Contrasenya reestablerta correctament</string>
    <string name="ConstrasenyaBuida">Contrasenya buida</string>
    <string name="ConstrasenyaIncorrecta">Usuari o contrasenya incorrecta</string>
    <string name="Codi">Codi</string>
    <string name="Codi_acces">Codi d\'acces</string>
    <string name="AfegirAula">Afegir nova aula</string>
    <string name="infoAlumne">Informacio alumne</string>
    <string name="Tornar">Tornar</string>
    <string name="Nivell">Nivell</string>
    <string name="Rang">Rang</string>
    <string name="Quitar_alumne">Esta segur de que vols treure l\'alumne de l\'aula?</string>
    <string name="PerfilUsuari">Perfil d\'usuari</string>
    <string name="errorLogout">No s\'ha pogut tancar la sessió</string>






</resources>